new folder structures

--- a/package.json
+++ b/package.json
@@ -6,9 +6,9 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "server": "node server/index.js",
-    "client": "cd censys && npm run start",
-    "build:client": "cd censys && npm run build",
-    "iall": "npm i && cd censys && npm i",
+    "client": "cd client && npm run start",
+    "build:client": "cd client && npm run build",
+    "iall": "npm i && cd client && npm i",
     "startboth": "npm run server & npm run client"
   },
   "keywords": [],
