--- a/package.json
+++ b/package.json
@@ -2,10 +2,9 @@
   "name": "node-app",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "server": "node server/index.js",
+    "tsc": "tsc -p server/tsconfig.json",
+    "server": "ts-node server/express/index.ts",
     "client": "cd client && npm run start",
     "build:client": "cd client && npm run build",
     "iall": "npm i && cd client && npm i",
@@ -16,7 +15,16 @@
   "license": "ISC",
   "dependencies": {
     "@maxmind/geoip2-node": "^3.4.0",
+    "@types/jest": "^27.4.0",
+    "@types/node": "^17.0.15",
+    "@types/react": "^17.0.39",
+    "@types/react-dom": "^17.0.11",
     "dotenv": "^16.0.0",
-    "express": "^4.17.2"
+    "express": "^4.17.2",
+    "ts-node": "^10.4.0",
+    "typescript": "^4.5.5"
+  },
+  "devDependencies": {
+    "@types/express": "^4.17.13"
   }
 }
