--- a/client/package.json
+++ b/client/package.json
@@ -21,12 +21,13 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "5.0.0",
+    "ts-jest": "^27.1.3",
     "typescript": "^4.5.5"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
+    "test:unit": "jest",
     "eject": "react-scripts eject"
   },
   "proxy": "http://localhost:8080/",
@@ -49,6 +50,11 @@
     ]
   },
   "devDependencies": {
+    "@babel/preset-typescript": "^7.16.7",
+    "@types/enzyme-adapter-react-16": "^1.0.6",
+    "enzyme": "^3.11.0",
+    "enzyme-adapter-react-16": "^1.15.6",
+    "jest": "^27.5.0",
     "jest-watch-typeahead": "^0.6.5"
   }
 }
