--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "client": "cd client && npm run start",
     "build:client": "cd client && npm run build",
     "iall": "npm i && cd client && npm i",
-    "startboth": "npm run server & npm run client"
+    "startboth": "npm run server & npm run client",
+    "test:unit": "jest"
   },
   "keywords": [],
   "author": "",
