--- a/package.json
+++ b/package.json
@@ -22,10 +22,12 @@
     "@types/react-dom": "^17.0.11",
     "dotenv": "^16.0.0",
     "express": "^4.17.2",
+    "ts-jest": "^27.1.3",
     "ts-node": "^10.4.0",
     "typescript": "^4.5.5"
   },
   "devDependencies": {
-    "@types/express": "^4.17.13"
+    "@types/express": "^4.17.13",
+    "jest": "^27.5.0"
   }
 }
