--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3.7'
 
 services:
   app:
-    container_name: app-dev2
+    container_name: app-dev
     build:
       context: .
       dockerfile: Dockerfile
