--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "scripts": {
     "tsc": "tsc -p server/tsconfig.json",
-    "server": "ts-node server/express/index.ts",
+    "server": "nodemon server/express/index.ts",
     "client": "cd client && npm run start",
     "build:client": "cd client && npm run build",
     "iall": "npm i && cd client && npm i",
@@ -22,6 +22,7 @@
     "@types/react-dom": "^17.0.11",
     "dotenv": "^16.0.0",
     "express": "^4.17.2",
+    "nodemon": "^2.0.15",
     "ts-jest": "^27.1.3",
     "ts-node": "^10.4.0",
     "typescript": "^4.5.5"
