added search on enter functionality with unit tests

--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "build:client": "cd client && npm run build",
     "iall": "npm i && cd client && npm i",
     "startboth": "npm run server & npm run client",
-    "test:unit": "jest"
+    "test:unit": "jest",
+    "test:unit:frontend": "jest --verbose client/src",
+    "test:unit:backend": "jest --verbose server/locations"
   },
   "keywords": [],
   "author": "",
